--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 06 13:48:24 EET 2025
-sdk.dir=C\:\\Users\\eseif\\AppData\\Local\\Android\\Sdk
+#Fri Nov 07 17:17:09 EET 2025
+sdk.dir=C\:\\Users\\ahmed\\AppData\\Local\\Android\\Sdk
