--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 08 03:22:12 EET 2025
-sdk.dir=C\:\\Users\\DELL G15\\AppData\\Local\\Android\\Sdk
+#Sun Nov 09 02:24:01 EET 2025
+sdk.dir=C\:\\Users\\lllllll\\AppData\\Local\\Android\\Sdk
