--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+   <uses-permission android:name="android.permission.POST_NOTIFICATIONS"
 
+       android:minSdkVersion="33"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".NetfrixApplication"
@@ -15,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Netfrix"
         tools:targetApi="31">
+
+        <receiver android:name=".PhoneCallReceiver"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
