--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
        android:minSdkVersion="33"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".NetfrixApplication"
@@ -19,12 +18,11 @@
         android:theme="@style/Theme.Netfrix"
         tools:targetApi="31">
 
-        <receiver android:name=".PhoneCallReceiver"/>
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.Netfrix">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
