--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 14 01:35:08 EET 2025
-sdk.dir=C\:\\Users\\AMR GEM\\AppData\\Local\\Android\\Sdk
+#Wed Nov 26 15:54:01 EET 2025
+sdk.dir=C\:\\Users\\ahmed\\AppData\\Local\\Android\\Sdk
