Refactor: Clean up project structure and remove unused files
This commit refactors the project by reorganizing and deleting obsolete files, leading to a cleaner and more maintainable codebase.

- **feat:** Add new `copilot.data.migration.*.xml` files to the `.idea` directory.
- **refactor:**
    - Move `SettingsViewModel` from `ui/ui/screens/settings` to a new top-level `viewmodel` package.
    - Move `MovieService` from `data/remote` to the `network` package.
    - Update all corresponding imports in `MainScreen`, `SettingsScreen`, `NavGraph`, `MainActivity`, and `AppModule` to reflect the new locations.
- **chore:**
    - Remove the unused `ListConverter` and the associated `@TypeConverters` annotation from `MovieDatabase`.
    - Delete the obsolete `MovieRepository` which used SharedPreferences and an old API service.
    - Clean up unused methods from the current `MovieRepository`.
    - Delete the old `MovieApiService` and `MovieResponse` files.
- **fix:** Correct the `@ApplicationContext` annotation import in `AppModule`.
- **ci:** Update `local.properties` with a new SDK path and remove a `runConfig` from `deploymentTargetSelector.xml`.

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 26 15:54:01 EET 2025
-sdk.dir=C\:\\Users\\ahmed\\AppData\\Local\\Android\\Sdk
+#Sat Nov 29 17:47:52 EET 2025
+sdk.dir=C\:\\Users\\eseif\\AppData\\Local\\Android\\Sdk
