--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 29 17:47:52 EET 2025
-sdk.dir=C\:\\Users\\eseif\\AppData\\Local\\Android\\Sdk
+#Sun Nov 30 17:23:01 EET 2025
+sdk.dir=C\:\\Users\\ahmed\\AppData\\Local\\Android\\Sdk
