--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 01 22:41:58 EET 2025
-sdk.dir=C\:\\Users\\AMR GEM\\AppData\\Local\\Android\\Sdk
+#Mon Dec 01 20:53:39 EET 2025
+sdk.dir=C\:\\Users\\DELL G15\\AppData\\Local\\Android\\Sdk
